--- a/UniverseSharp.Tests/UniverseSharp.Tests.csproj
+++ b/UniverseSharp.Tests/UniverseSharp.Tests.csproj
@@ -21,4 +21,8 @@
         </PackageReference>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\UniverseSharp\UniverseSharp.csproj" />
+    </ItemGroup>
+
 </Project>
