--- a/UniverseSharp/UniverseSharp.csproj
+++ b/UniverseSharp/UniverseSharp.csproj
@@ -3,10 +3,19 @@
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
         <Nullable>enable</Nullable>
+        <Title>Universe Sharp</Title>
+        <PackageId>UniverseSharp</PackageId>
+        <Authors>KarolWojtasiuk</Authors>
+        <Version>1.0.0</Version>
+        <Description>Library to facilitate physical calculations e.g. calculating cosmic velocity from given mass and radius.</Description>
+        <PackageProjectUrl>https://github.com/KarolWojtasiuk/UniverseSharp</PackageProjectUrl>
+        <PackageLicenseUrl>https://github.com/KarolWojtasiuk/UniverseSharp/blob/master/LICENSE.md</PackageLicenseUrl>
+        <RepositoryUrl>https://github.com/KarolWojtasiuk/UniverseSharp</RepositoryUrl>
+        <PackageTags>csharp;dotnet;astronomy;space;gravity;astrophysics;universe;celestial-bodies;planets;nasa-data;gravitational-objects</PackageTags>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="BigFloat" Version="1.2.0" />
+        <PackageReference Include="BigFloat" Version="1.2.0" />
     </ItemGroup>
 
 </Project>
